--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     // Однако это не означает, что теперь вовсе нельзя использовать any.
     // Это означает лишь, что в подобных ситуация разработчик должен явно писать any,
     "noImplicitAny": true,
-    "module": "es6",
+    "module": "ESNext",
     // В какую спецификацию компилируем: для поддержки большинства браузеров
     "target": "es5",
     "jsx": "react-jsx",
@@ -14,6 +14,9 @@
     "moduleResolution": "node",
     // Для абсолютного импорта
     "baseUrl": ".",
+    "paths": {
+      "*": ["./src/*"]
+    },
     // esModuleInterop позволяет работать с пакетами, которые используют
     // common js как с обычными пакета с помощью import (require() module.export) = common js
     // import Moment from 'moment';
@@ -28,9 +31,7 @@
     // import * as React from 'react';
     // можно писать такой
     // import React from 'react';
-    "allowSyntheticDefaultImports": true,
-    // то что ниже я добавила сама чтобы убрать ошибку это в разделе 1 урок 4
-    "allowUmdGlobalAccess": true,
+    "allowSyntheticDefaultImports": true
   },
   "ts-node": {
     "compilerOptions": {
@@ -38,3 +39,6 @@
     }
   }
 }
+
+// то что ниже я добавила сама чтобы убрать ошибку это в разделе 1 урок 4
+    //"allowUmdGlobalAccess": true,
